# LatentGuard

./: .gitignore  CLAUDE.md  FYP-0 Scope Submission.docx  README.md  SRS Document.md
dashboard/: README.md  index.html
dashboard/assets/: style.css
dashboard/js/: app.js
datasets/: README.md  crawl_dvwa_benign.py  prime_dvwa_full.py  replay_csic.py
infra/: README.md  docker-compose.yml
latentguard/: consensus.py  interceptor.py  ml.py  normalizer.py  pipeline.py  rule_engine.py  rulegen.py  server.py  storage.py
ml/: .dockerignore  Dockerfile  README.md  pyproject.toml
ml/app/: api.py  db.py  features.py  main.py  models.py  schemas.py
ml/app/consensus/: __init__.py  engine.py  store.py
ml/models/: autoencoder.json  hdbscan.json
ml/training/: csic_loader.py  mongo_loader.py  train_autoencoder.py  train_hdbscan.py
proxy/: Dockerfile  README.md  go.mod  go.sum
proxy/cmd/proxy/: main.go
proxy/internal/client/: ml.go
proxy/internal/coraza/: coraza.go  coraza_test.go
proxy/internal/decision/: decision.go
proxy/internal/normalizer/: normalizer.go  normalizer_test.go
proxy/internal/pipeline/: pipeline.go  pipeline_test.go
proxy/internal/storage/: mongo.go
proxy/rules/: 00-setup.conf  10-latentguard-baseline.conf  README.md
proxy/scripts/: fetch-crs.sh
reference/: README.md  main.py
reference/latentguard-package/: __init__.py  contracts.py  pipeline.py  rulegen.py
reference/tests/: test_first_three_modules.py  test_pipeline.py
storage/: README.md
tests/: test_first_three_modules.py  test_pipeline.py
(+1 files in other folders)
